force-app/main/default/objects/Course_Offering_Schedule__c/Course_Offering_Schedule__c.object-meta.xml
<CustomObject>
    <description>Joins Course Offering to Time Block and provides a way to specify the days and location for a Course.</description>
    <label>Course Offering Schedule</label>
    <nameField>
        <displayFormat>CSH-{000000}</displayFormat>
        <label>Course Offering Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Offering Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>