force-app/main/default/objects/Course_Offering_Schedule__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course Offering this schedule is for.</description>
    <inlineHelpText>The Course Offering this schedule is for.</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>Course_Offering__c</referenceTo>
    <relationshipLabel>Course Offering Schedules</relationshipLabel>
    <relationshipName>Course_Offering_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>