force-app/main/default/objects/Course_Offering_Schedule__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The location of the scheduled Course Offering.</description>
    <inlineHelpText>The location of the scheduled Course Offering.</inlineHelpText>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Course Offering Schedules</relationshipLabel>
    <relationshipName>Course_Offering_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>