force-app/main/default/objects/Course_Offering_Schedule__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to indicate this Course Offering is on Fridays. You can select multiple days.</description>
    <inlineHelpText>Select to indicate this Course Offering is on Fridays. You can select multiple days.</inlineHelpText>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>