force-app/main/default/objects/Course_Offering_Schedule__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to indicate this Course Offering is on Mondays. You can select multiple days.</description>
    <inlineHelpText>Select to indicate this Course Offering is on Mondays. You can select multiple days.</inlineHelpText>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>