force-app/main/default/objects/Course_Offering_Schedule__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to indicate this Course Offering is on Saturdays. You can select multiple days.</description>
    <inlineHelpText>Select to indicate this Course Offering is on Saturdays. You can select multiple days.</inlineHelpText>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>