force-app/main/default/objects/Course_Offering_Schedule__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to indicate this Course Offering is on Thursdays. You can select multiple days.</description>
    <inlineHelpText>Select to indicate this Course Offering is on Thursdays. You can select multiple days.</inlineHelpText>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>