force-app/main/default/objects/Course_Offering_Schedule__c/fields/Time_Block__c.field-meta.xml
<CustomField>
    <fullName>Time_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Time Block in which this Course Offering is being held.</description>
    <inlineHelpText>The Time Block in which this Course Offering is being held.</inlineHelpText>
    <label>Time Block</label>
    <referenceTo>Time_Block__c</referenceTo>
    <relationshipLabel>Course Offering Schedules</relationshipLabel>
    <relationshipName>Course_Offering_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>