force-app/main/default/objects/Course_Offering_Schedule__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to indicate this Course Offering is on Tuesdays. You can select multiple days.</description>
    <inlineHelpText>Select to indicate this Course Offering is on Tuesdays. You can select multiple days.</inlineHelpText>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>